--- a/vagrant-provisioning/Vagrantfile
+++ b/vagrant-provisioning/Vagrantfile
@@ -42,7 +42,7 @@ Vagrant.configure(2) do |config|
 	  config.vm.define "#{BOX_NAME}#{i}" do |node|
       node.vm.box = BOX_BASE
       node.vm.hostname = "#{HOST_NAME}#{i}.testlab.local"
-      node.vm.network "public_network", ip: "192.168.16.141"
+      node.vm.network "public_network", ip: "192.168.16.141", bridge: "eno1"
 
 	    ##provision resources to vm
 	    node.vm.provider "virtualbox" do |vb|
